add options config to sub pub

--- a/example/index.html
+++ b/example/index.html
@@ -26,11 +26,13 @@
     </div>
     <script type="text/javascript" src="../dist/index.min.js"></script>
     <script>
-        const mqtt = new MqttLite('ws://iot.eclipse.org:80/ws', {debug: false})
+        const mqtt = new MqttLite('ws://iot.eclipse.org:80/ws', {debug: true})
         mqtt.subscribe('testx', (msg) => {
             console.log('recive message: ', msg)
             document.getElementsByClassName('message')[0].insertAdjacentHTML('beforeBegin', `<p>${msg}</p>`)
             document.getElementById('message').value = ''
+        }).then(e=>{
+            console.log(e)
         })
         function send () {
             mqtt.publish('testx', document.getElementById('message').value)
